[gd_scene load_steps=3 format=2]

[ext_resource path="res://Draw.gd" type="Script" id=1]
[ext_resource path="res://pdollar/GestureManager.gd" type="Script" id=3]

[node name="Draw" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_bottom = -3.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
paintWidth = 5.0

[node name="GUIRecognizer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUIRecognizer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUIRecognizer/MarginContainer"]
margin_right = 1022.0
margin_bottom = 597.0

[node name="MarginContainer" type="MarginContainer" parent="GUIRecognizer/MarginContainer/HBoxContainer"]
margin_right = 252.0
margin_bottom = 597.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="GUIRecognizer/MarginContainer/HBoxContainer"]
margin_left = 256.0
margin_right = 509.0
margin_bottom = 597.0
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="GUIRecognizer/MarginContainer/HBoxContainer"]
margin_left = 513.0
margin_right = 765.0
margin_bottom = 597.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GUIRecognizer/MarginContainer/HBoxContainer"]
margin_left = 769.0
margin_right = 1022.0
margin_bottom = 597.0
size_flags_horizontal = 3
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 253.0
margin_bottom = 431.0
size_flags_vertical = 3

[node name="TextEdit" type="LineEdit" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 435.0
margin_right = 253.0
margin_bottom = 459.0
caret_blink_speed = 0.1

[node name="Save" type="Button" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 463.0
margin_right = 253.0
margin_bottom = 483.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Add Gesture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 487.0
margin_right = 253.0
margin_bottom = 507.0
text = "Load Gesture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 511.0
margin_right = 253.0
margin_bottom = 531.0
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recognize" type="Button" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 535.0
margin_right = 253.0
margin_bottom = 555.0
text = "Recognize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteGestures" type="Button" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 559.0
margin_right = 253.0
margin_bottom = 579.0
text = "Delete Gestures"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 583.0
margin_right = 253.0
margin_bottom = 597.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gesture"

[node name="Timer" type="Timer" parent="GUIRecognizer"]
one_shot = true
[connection signal="clear" from="GUIRecognizer" to="." method="reset"]
[connection signal="recognized" from="GUIRecognizer" to="." method="_on_GUIRecognizer_recognized"]
[connection signal="show_gesture" from="GUIRecognizer" to="." method="_on_show_gesture"]
[connection signal="button_down" from="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer/Save" to="GUIRecognizer" method="_on_save"]
[connection signal="button_down" from="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer/Load" to="GUIRecognizer" method="_on_load"]
[connection signal="button_down" from="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer/Clear" to="." method="reset"]
[connection signal="button_down" from="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer/Recognize" to="GUIRecognizer" method="recognize"]
[connection signal="button_down" from="GUIRecognizer/MarginContainer/HBoxContainer/VBoxContainer/DeleteGestures" to="GUIRecognizer" method="_on_DeleteGestures_button_down"]
[connection signal="timeout" from="GUIRecognizer/Timer" to="GUIRecognizer" method="recognize"]
